Use Map.of when appropriate